--- a/addons/voice/pom.xml
+++ b/addons/voice/pom.xml
@@ -16,8 +16,8 @@
   <packaging>pom</packaging>
 
   <modules>
-    <!--<module>org.openhab.voice.cmusphinx</module>
-    <module>org.openhab.voice.kaldi</module>-->
+    <module>org.openhab.voice.cmusphinx</module>
+    <!--<module>org.openhab.voice.kaldi</module>-->
     <module>org.openhab.voice.marytts</module>
     <module>org.openhab.voice.voicerss</module>
   </modules>
